# web

./: .gitignore  Dockerfile  README.md
backend/: main.py  pyproject.toml  shop.db
backend/src/: app.py  deps.py  handlers.py
backend/src/repository/: __init__.py  interface.py  sql.py
backend/tests/: generate.py
frontend/static/: index.html  script.js  styles.css
